games: Mark utilities that write to /var/games/ directory.
Make them available for users in games group only.
This will allow to tighten security a bit.

While there, add missing creation of /var/games/atc_score.

--- a/games/atc/Makefile
+++ b/games/atc/Makefile
@@ -16,6 +16,14 @@ FILES=		Game_List Killer crossover default easy game_2
 FILESDIR=	${SHAREDIR}/games/atc
 .endif
 
+VARGAMES=	yes
+
+beforeinstall:
+.if !exists(${DESTDIR}/var/games/atc_score)
+	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m 664 /dev/null \
+	    ${DESTDIR}/var/games/atc_score
+.endif
+
 .PATH: ${.CURDIR}/games
 
 .include <bsd.prog.mk>
