--- a/games/rogue/Makefile
+++ b/games/rogue/Makefile
@@ -13,6 +13,8 @@ CFLAGS+=	-DUNIX
 CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
+VARGAMES=	yes
+
 beforeinstall:
 .if !exists(${DESTDIR}/var/games/rogue.scores)
 	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m 664 /dev/null \
