--- a/games/sail/Makefile
+++ b/games/sail/Makefile
@@ -12,6 +12,8 @@ LDADD=	-lprivate_ncurses
 CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
+VARGAMES=	yes
+
 beforeinstall:
 .if !exists(${DESTDIR}/var/games/saillog)
 	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m 664 /dev/null \
