--- a/games/canfield/canfield/Makefile
+++ b/games/canfield/canfield/Makefile
@@ -10,6 +10,8 @@ LDADD=	-lprivate_ncurses
 CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
+VARGAMES=	yes
+
 beforeinstall:
 .if !exists(${DESTDIR}/var/games/cfscores)
 	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m 664 /dev/null \
