dm(8): Retire the Dungeon Master.
One setgid utility less in base + it was shadowing dm(4).

Approved-by: swildner

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -23,7 +23,7 @@ BINUPDATE+=${.CURDIR}/../usr.bin/mail/misc/mail.rc \
 #
 BIN1=	auth.conf auto_master \
 	crontab csh.cshrc csh.login csh.logout \
-	devtab dhclient.conf dm.conf dntpd.conf \
+	devtab dhclient.conf dntpd.conf \
 	ftpusers group \
 	hosts hosts.allow hosts.equiv hosts.lpd \
 	inetd.conf login.access login.conf \
