hammer2 - buildworld components, boot2 and loader support
* Compile hammer2 components unconditionally in buildworld now.
  Leave conditionals commented out for the moment, they will be
  removed entirely later on.

* Finish revamping the boot code to properly handle H2 DIRENTs.
  The boot code can now boot from a HAMMER2 'a' partition if desired.
  UFS is no longer required.

* Change newfs_hammer2, mount_hammer2, and the hammer2 vfs to supply
  a default super-root label if none specified.  Supply "@BOOT" when
  mounting from the 'a' partition, "@ROOT" when mounting from the 'd'
  partition, and "@DATA" when mounting from any other partition.

  mount_hammer2 no longer defaults to using @LOCAL for the label when
  none is specified.  Instead we want hammer2 mounts that fail to supply
  a label to behave in a manner that is more likely to be expected by
  the superuser.

* Do not yet include hammer2 in X86_64_GENERIC.  At the moment it must
  be supplied in /boot/loader.conf if the user wishes to boot from it.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -110,9 +110,9 @@ SUBDIR:=	libc ${SUBDIR:Nlibc}
 .endif
 
 .if !defined(NO_CRYPT)
-.  if defined(WANT_HAMMER2)
+#.  if defined(WANT_HAMMER2)
 _libdmsg=	libdmsg
-.  endif
+#.  endif
 
 SUBDIR+=	libldns \
 		libtcplay
