--- a/sbin/Makefile
+++ b/sbin/Makefile
@@ -120,12 +120,12 @@ SUBDIR+=cryptdisks \
 
 # include hammer2 utilities (requires LibreSSL)
 #
-.  if defined(WANT_HAMMER2)
+#.  if defined(WANT_HAMMER2)
 _mount_hammer2= mount_hammer2
 _newfs_hammer2=	newfs_hammer2
 _hammer2=	hammer2
 .  endif
-.endif
+#.endif
 
 # maximum parallelism
 #
