--- a/sys/boot/efi/loader/arch/x86_64/Makefile.inc
+++ b/sys/boot/efi/loader/arch/x86_64/Makefile.inc
@@ -9,5 +9,8 @@ SRCS+=	amd64_tramp.S \
 SRCS+=	nullconsole.c \
 	comconsole.c
 
+# Disable stack protector
+CFLAGS+=	-fno-stack-protector
+
 CFLAGS+=	-fPIC
 LDFLAGS+=	-Wl,-znocombreloc
