installer - Add hammer2 support to the installer
* hammer2 can now be selected as a filesystem in the installer.

* Note that we still for /boot to use UFS.  The boot loader *CAN*
  access a hammer2 /boot, but the small size of the filesystem makes
  it too easy to fill up when doing installkernel or installworld.

* Also fix a minor bug in the installer.  when issuing a 'dumpon device'
  be sure to first issue a 'dumpon off' to avoid dumpon complaints about
  a dump device already being specified.

--- a/share/installer/cmdnames.conf
+++ b/share/installer/cmdnames.conf
@@ -30,15 +30,18 @@ DUMPON=sbin/dumpon
 FDISK=sbin/fdisk
 GPT=sbin/gpt
 HAMMER=sbin/hammer
+HAMMER2=sbin/hammer2
 IFCONFIG=sbin/ifconfig
 MOUNT=sbin/mount
 MOUNTD=sbin/mountd
 MOUNT_HAMMER=sbin/mount_hammer
+MOUNT_HAMMER2=sbin/mount_hammer2
 MOUNT_MSDOS=sbin/mount_msdos
 MOUNT_NULL=sbin/mount_null
 MOUNT_TMPFS=sbin/mount_tmpfs
 NEWFS=sbin/newfs
 NEWFS_HAMMER=sbin/newfs_hammer
+NEWFS_HAMMER2=sbin/newfs_hammer2
 NEWFS_MSDOS=sbin/newfs_msdos
 NFSD=sbin/nfsd
 ROUTE=sbin/route
