--- a/etc/defaults/periodic.conf
+++ b/etc/defaults/periodic.conf
@@ -72,6 +72,11 @@ daily_clean_hammer_enable="YES"				# HAMMER maintenance
 daily_clean_hammer_verbose="NO"				# Be verbose
 daily_clean_hammer_pfslist=""				# default: mounted pfs
 
+# 161.clean-hammer2
+daily_clean_hammer2_enable="YES"			# HAMMER maintenance
+daily_clean_hammer2_verbose="NO"			# Be verbose
+daily_clean_hammer2_pfslist=""				# default: all mounted
+
 # 200.backup-passwd
 daily_backup_passwd_enable="YES"			# Backup passwd & group
 
