virtio - Get rid of config_change devmethod, treat like vq interrupts.

--- a/sys/dev/virtual/virtio/block/Makefile
+++ b/sys/dev/virtual/virtio/block/Makefile
@@ -25,7 +25,7 @@
 
 KMOD=	virtio_blk
 SRCS=	virtio_blk.c
-SRCS+=	virtio_bus_if.h virtio_if.h
+SRCS+=	virtio_bus_if.h
 SRCS+=	bus_if.h device_if.h 
 
 .include <bsd.kmod.mk>
