--- a/lib/libmagic/Makefile
+++ b/lib/libmagic/Makefile
@@ -2,6 +2,7 @@ CONTRIBDIR=	${.CURDIR}/../../contrib/file/src
 MAGICDIR= ${CONTRIBDIR}/../magic
 .PATH: ${CONTRIBDIR}
 
+VER!=	grep -w VERSION ${.CURDIR}/config.h | awk -F\" '{print $$2}'
 MAGIC=	${FILESDIR}/magic
 
 LIB=	magic
@@ -11,7 +12,7 @@ DPADD=	${LIBZ}
 LDADD=	-lz
 
 SRCS=	apprentice.c ascmagic.c cdf.c cdf_time.c \
-	compress.c encoding.c fsmagic.c funcs.c \
+	compress.c der.c encoding.c fsmagic.c funcs.c \
 	is_tar.c magic.c print.c readcdf.c readelf.c softmagic.c
 INCS=	magic.h
 
@@ -19,7 +20,7 @@ INCS=	magic.h
 #SRCS+=	apptype.c
 
 CFLAGS+= -DHAVE_CONFIG_H -DMAGIC=\"${MAGIC}\"
-CFLAGS+= -I${.CURDIR} -I${CONTRIBDIR}
+CFLAGS+= -I${.CURDIR} -I${.OBJDIR} -I${CONTRIBDIR}
 
 MAN=	libmagic.3
 
@@ -30,6 +31,7 @@ MLINKS+=	libmagic.3 magic_errno.3
 MLINKS+=	libmagic.3 magic_descriptor.3
 MLINKS+=	libmagic.3 magic_file.3
 MLINKS+=	libmagic.3 magic_buffer.3
+MLINKS+=	libmagic.3 magic_getflags.3
 MLINKS+=	libmagic.3 magic_setflags.3
 MLINKS+=	libmagic.3 magic_check.3
 MLINKS+=	libmagic.3 magic_compile.3
@@ -45,7 +47,7 @@ CLEANFILES+=	magic magic.mgc libmagic.3
 FILES=		magic magic.mgc
 FILESDIR=	${SHAREDIR}/misc
 
-MAGFILES=	${MAGICDIR}/Header ${MAGICDIR}/Localstuff\
+MAGFILES=	${MAGICDIR}/Header ${MAGICDIR}/Localstuff \
 		${MAGICDIR}/Magdir/[a-z]*
 
 libmagic.3: ${CONTRIBDIR}/../doc/libmagic.man
@@ -63,7 +65,13 @@ CLEANFILES+=   mkmagic.nx
 build-tools: mkmagic.nx
 
 NXCFLAGS+=	-w -DCOMPILE_ONLY
-mkmagic.nx: apprentice.c encoding.c cdf_time.c funcs.c magic.c print.c
-	${NXCC} ${NXCFLAGS} ${NXLDFLAGS} ${.ALLSRC} ${NXLDLIBS} -o ${.TARGET}
+mkmagic.nx: apprentice.c encoding.c cdf_time.c funcs.c magic.c print.c ${INCS}
+	${NXCC} ${NXCFLAGS} ${NXLDFLAGS} ${.ALLSRC:N*.h} ${NXLDLIBS} -o ${.TARGET}
+
+CLEANFILES+=	${INCS}
+.for inc in ${INCS}
+${inc}: ${inc}.in
+	sed -e 's,X.YY,${VER:S,",,g:S,.,,g},g' ${.ALLSRC} > ${.TARGET}
+.endfor
 
 .include <bsd.lib.mk>
