--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3221,6 +3221,35 @@ TO_REMOVE+=/usr/include/sys/device_port.h
 TO_REMOVE+=/usr/include/sys/ieee754.h
 TO_REMOVE+=/usr/include/sys/nlist_aout.h
 TO_REMOVE+=/usr/include/sys/sysvipc.h
+TO_REMOVE+=/usr/include/man.h
+TO_REMOVE+=/usr/include/mandoc.h
+TO_REMOVE+=/usr/include/mdoc.h
+TO_REMOVE+=/usr/lib/libmandoc.a
+TO_REMOVE+=/usr/lib/libmandoc.so
+TO_REMOVE+=/usr/lib/libmandoc.so.0
+TO_REMOVE+=/usr/lib/profile/libmandoc.a
+TO_REMOVE+=/usr/share/man/man3/man_meta.3.gz
+TO_REMOVE+=/usr/share/man/man3/man_mparse.3.gz
+TO_REMOVE+=/usr/share/man/man3/man_node.3.gz
+TO_REMOVE+=/usr/share/man/man3/mandoc.3.gz
+TO_REMOVE+=/usr/share/man/man3/mandoc_escape.3.gz
+TO_REMOVE+=/usr/share/man/man3/mchars_alloc.3.gz
+TO_REMOVE+=/usr/share/man/man3/mchars_free.3.gz
+TO_REMOVE+=/usr/share/man/man3/mchars_num2char.3.gz
+TO_REMOVE+=/usr/share/man/man3/mchars_num2uc.3.gz
+TO_REMOVE+=/usr/share/man/man3/mchars_spec2cp.3.gz
+TO_REMOVE+=/usr/share/man/man3/mchars_spec2str.3.gz
+TO_REMOVE+=/usr/share/man/man3/mdoc_meta.3.gz
+TO_REMOVE+=/usr/share/man/man3/mdoc_node.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_alloc.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_free.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_getkeep.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_keep.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_readfd.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_reset.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_result.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_strerror.3.gz
+TO_REMOVE+=/usr/share/man/man3/mparse_strlevel.3.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
