Bring in vmx(4) (VMware virtual network driver, aka vmxnet3).
Some features are still disabled, namely LRO, TSO, VLAN_HWFILTER,
and MSI-X support. That being said, it works and seems stable.

Tested-by:  swildner (VMware Player 7.1.4 build-3848939)
            tuxillo (VMware ESXi 6.5.0 (Build 4887370))
Taken-from: FreeBSD (in turn based on OpenBSD's driver)

--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -387,6 +387,7 @@ MAN=	aac.4 \
 	virtio_scsi.4 \
 	vlan.4 \
 	vmbus.4 \
+	vmx.4 \
 	vn.4 \
 	vpo.4 \
 	vr.4 \
@@ -551,6 +552,7 @@ MLINKS+=urtwn.4 if_urtwn.4
 MLINKS+=vga_switcheroo.4 apple_gmux.4
 MLINKS+=vge.4 if_vge.4
 MLINKS+=vlan.4 if_vlan.4
+MLINKS+=vmx.4 if_vmx.4
 MLINKS+=vpo.4 imm.4
 MLINKS+=vr.4 if_vr.4
 MLINKS+=vtnet.4 if_vtnet.4
