--- a/sbin/mount_hammer2/Makefile
+++ b/sbin/mount_hammer2/Makefile
@@ -1,6 +1,6 @@
 PROG=	mount_hammer2
 SRCS=	mount_hammer2.c
-MAN=
+MAN=	mount_hammer2.8
 
 CFLAGS+= -I${.CURDIR}/..
 CFLAGS+= -I${.CURDIR}/../../crypto/libressl/include
