periodic.conf: Fix typo in comment

--- a/etc/defaults/periodic.conf
+++ b/etc/defaults/periodic.conf
@@ -73,7 +73,7 @@ daily_clean_hammer_verbose="NO"				# Be verbose
 daily_clean_hammer_pfslist=""				# default: mounted pfs
 
 # 161.clean-hammer2
-daily_clean_hammer2_enable="YES"			# HAMMER maintenance
+daily_clean_hammer2_enable="YES"			# HAMMER2 maintenance
 daily_clean_hammer2_verbose="NO"			# Be verbose
 daily_clean_hammer2_pfslist=""				# default: all mounted
 
