--- a/lib/libssh/Makefile
+++ b/lib/libssh/Makefile
@@ -13,10 +13,10 @@ SRCS=	ssh_api.c \
 	bitmap.c
 SRCS+=	authfd.c authfile.c bufaux.c bufbn.c bufec.c buffer.c \
 	canohost.c channels.c cipher.c \
-	cipher-bf1.c cipher-3des1.c cleanup.c \
-	compat.c crc32.c deattack.c fatal.c hostfile.c \
+	cleanup.c \
+	compat.c crc32.c fatal.c hostfile.c \
 	log.c match.c moduli.c nchan.c packet.c opacket.c \
-	readpass.c rsa.c ttymodes.c xmalloc.c addrmatch.c \
+	readpass.c ttymodes.c xmalloc.c addrmatch.c \
 	atomicio.c key.c dispatch.c mac.c uidswap.c uuencode.c misc.c utf8.c \
 	monitor_fdpass.c rijndael.c ssh-dss.c ssh-ecdsa.c ssh-rsa.c dh.c \
 	msg.c progressmeter.c dns.c entropy.c umac.c umac128.c \
@@ -27,11 +27,12 @@ SRCS+=	authfd.c authfile.c bufaux.c bufbn.c bufec.c buffer.c \
 	kex.c kexdh.c kexgex.c kexecdh.c kexc25519.c \
 	kexdhc.c kexgexc.c kexecdhc.c kexc25519c.c \
 	kexdhs.c kexgexs.c kexecdhs.c kexc25519s.c \
-	platform-pledge.c platform-tracing.c
+	platform-pledge.c platform-tracing.c platform-misc.c
 # Portability layer
 SRCS+=	bcrypt_pbkdf.c blowfish.c bsd-misc.c explicit_bzero.c \
 	getrrsetbyname.c glob.c openssl-compat.c \
-	port-tun.c reallocarray.c realpath.c timingsafe_bcmp.c vis.c
+	port-tun.c reallocarray.c realpath.c timingsafe_bcmp.c vis.c \
+	recallocarray.c
 
 # only when USE_BUILTIN_RIJNDAEL
 #SRCS+=	cipher-aes.c
