--- a/etc/defaults/mkinitrd.conf
+++ b/etc/defaults/mkinitrd.conf
@@ -2,6 +2,6 @@
 #
 BOOT_DIR="/boot"
 CONTENT_DIRS="/usr/share/initrd"
-INITRD_DIRS="bin boot dev etc mnt proc root sbin tmp var var/empty new_root"
+INITRD_DIRS="bin boot dev etc mnt proc root sbin tmp var var/empty var/db new_root"
 INITRD_SIZE="15m"
 TMP_DIR="/tmp"
