--- a/sys/net/Makefile
+++ b/sys/net/Makefile
@@ -1,7 +1,7 @@
 SUBDIR=accf_data accf_http disc faith gif gre sl stf tap tun \
 	vlan zlib bridge lagg libalias dummynet ipfw \
 	dummynet3 ipfw3 ipfw3_basic ipfw3_nat ipfw3_layer2 ipfw3_layer4 \
-	ip6fw ip_mroute sppp ppp_layer pf
+	ip6fw ip_mroute sppp pf
 
 # empty to allow concurrent building
 #
