--- a/usr.bin/crunch/examples/really-big.conf
+++ b/usr.bin/crunch/examples/really-big.conf
@@ -69,7 +69,7 @@ srcdirs /usr/src/usr.sbin
 
 progs ac accton amd arp bad144 catman chown chroot config config.new cron
 progs dev_mkdb diskpart edquota flcopy gettable grfinfo hilinfo htable inetd
-progs iostat iteconfig kvm_mkdb mtree named portmap pppd
+progs iostat iteconfig kvm_mkdb mtree named portmap
 progs pstat pwd_mkdb quot quotaon rarpd rbootd repquota rmt rpc.bootparamd
 progs rwhod sa spray sysctl syslogd tcpdump
 progs traceroute trpt update vipw vnconfig ypbind yppoll ypset
