Add mount_hammer2 and newfs_hammer2 to initrd list.

--- a/share/initrd/sbin/Makefile
+++ b/share/initrd/sbin/Makefile
@@ -35,6 +35,7 @@ CRUNCH_PROGS_sbin=	\
 	mount		\
 	mount_cd9660	\
 	mount_hammer	\
+	mount_hammer2	\
 	mount_msdos	\
 	mount_nfs	\
 	mount_ntfs	\
@@ -44,6 +45,7 @@ CRUNCH_PROGS_sbin=	\
 	natacontrol	\
 	newfs		\
 	newfs_hammer	\
+	newfs_hammer2	\
 	newfs_msdos	\
 	rconfig		\
 	reboot		\
