Install vfs/tmpfs headers

--- a/include/Makefile
+++ b/include/Makefile
@@ -88,7 +88,7 @@ LSUBDIRS= \
 	vfs/isofs/cd9660 vfs/puffs \
 	vfs/msdosfs vfs/nfs vfs/ntfs \
 	vfs/smbfs vfs/udf vfs/ufs vfs/hammer vfs/hammer2 \
-	vfs/autofs
+	vfs/autofs vfs/tmpfs
 
 # For SHARED=symlinks, bus/cam is a symlink, so cam/scsi is taken care of
 LSYMSUBDIRS=	${LSUBDIRS:Nbus/cam/scsi:Nnet/*:Nnetgraph/*:Nnetgraph7/*}
