--- a/games/cribbage/Makefile
+++ b/games/cribbage/Makefile
@@ -9,8 +9,10 @@ CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
 SRCS=	extern.c crib.c cards.c instr.c io.c score.c support.c
+.if !defined(NO_SHARE)
 FILES=	cribbage.n
 FILESNAME_cribbage.n=	cribbage.instr
+.endif
 MAN=	cribbage.6
 HIDEGAME=hidegame
 
