--- a/games/fortune/Makefile
+++ b/games/fortune/Makefile
@@ -1,5 +1,8 @@
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
-SUBDIR= fortune strfile datfiles unstr
+SUBDIR= fortune strfile unstr
+.if !defined(NO_SHARE)
+SUBDIR+= datfiles
+.endif
 
 .include <bsd.subdir.mk>
