--- a/gnu/usr.bin/groff/Makefile
+++ b/gnu/usr.bin/groff/Makefile
@@ -1,5 +1,9 @@
+
 # $FreeBSD: src/gnu/usr.bin/groff/Makefile,v 2.11 2003/05/02 00:55:52 ru Exp $
 
-SUBDIR=		contrib font man src tmac
+SUBDIR=		contrib man src
+.if !defined(NO_SHARE)
+SUBDIR+=	font tmac
+.endif
 
 .include <bsd.subdir.mk>
