--- a/usr.bin/ee/Makefile
+++ b/usr.bin/ee/Makefile
@@ -16,6 +16,7 @@ LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
 WARNS?=	2
 
+.if !defined(NO_SHARE)
 NLS=	C fr_FR.ISO8859-1 de_DE.ISO8859-1 pl_PL.ISO8859-2 \
 	uk_UA.KOI8-U pt_BR.ISO8859-1 ru_RU.KOI8-R hu_HU.ISO8859-2
 
@@ -35,5 +36,6 @@ NLSSRCDIR_${lang}= ${.CURDIR}/nls/${lang}
 NLSSRCDIR_${lang}= ${.CURDIR}/../../contrib/ee
 . endif
 .endfor
+.endif
 
 .include <bsd.prog.mk>
