--- a/gnu/usr.bin/cvs/contrib/Makefile
+++ b/gnu/usr.bin/cvs/contrib/Makefile
@@ -1,16 +1,17 @@
 # $FreeBSD: src/gnu/usr.bin/cvs/contrib/Makefile,v 1.14.2.5 2002/12/19 21:18:01 peter Exp $
-# $DragonFly: src/gnu/usr.bin/cvs/contrib/Makefile,v 1.4 2004/05/20 02:27:54 dillon Exp $
 
 .include "../Makefile.inc"
 
 .PATH:	${CVSDIR}/contrib
 .PATH:	${CVSDIR}/man
 
+.if !defined(NO_SHARE)
 SCRIPTS= clmerge cln_hist commit_prep cvs2vendor cvs_acls \
 	 log log_accum mfpipe rcs-to-cvs rcs2log rcslock sccs2rcs \
 	 easy-import
 
 FILES=	 README cvshelp.man descend.man intro.doc
+.endif
 
 EXAMPDIR=	${SHAREDIR}/examples/cvs
 FILESDIR=	${EXAMPDIR}/contrib
