--- a/gnu/usr.bin/groff/src/utils/indxbib/Makefile
+++ b/gnu/usr.bin/groff/src/utils/indxbib/Makefile
@@ -5,7 +5,9 @@ SRCS=		indxbib.cpp signal.c
 DPADD=		${LIBBIB} ${LIBGROFF} ${LIBM}
 LDADD=		${LIBBIB} ${LIBGROFF} -lm
 CLEANFILES=	${MAN}
+.if !defined(NO_SHARE)
 FILES=		${DIST_DIR}/eign
 FILESDIR=	${SHAREDIR}/dict
+.endif
 
 .include <bsd.prog.mk>
