--- a/usr.bin/calendar/Makefile
+++ b/usr.bin/calendar/Makefile
@@ -1,9 +1,9 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $FreeBSD: src/usr.bin/calendar/Makefile,v 1.12.8.6 2003/04/06 20:04:56 dwmalone Exp $
-# $DragonFly: src/usr.bin/calendar/Makefile,v 1.6 2007/09/24 21:38:17 pavalos Exp $
 
 PROG=	calendar
 SRCS=   calendar.c io.c day.c ostern.c paskha.c
+.if !defined(NO_SHARE)
 INTER=          de_AT.ISO_8859-15 de_DE.ISO8859-1 fr_FR.ISO8859-1 \
 		hr_HR.ISO8859-2 hu_HU.ISO8859-2 ru_RU.KOI8-R uk_UA.KOI8-U
 DE_LINKS=       de_DE.ISO_8859-1 de_DE.ISO8859-15 de_DE.ISO_8859-15
@@ -32,5 +32,6 @@ beforeinstall:
 	rm -rf ${DESTDIR}${SHAREDIR}/calendar/${link}
 	${LN} -s hr_HR.ISO8859-2 ${DESTDIR}${SHAREDIR}/calendar/${link}
 .endfor
+.endif
 
 .include <bsd.prog.mk>
