--- a/usr.bin/units/Makefile
+++ b/usr.bin/units/Makefile
@@ -1,8 +1,10 @@
 # $FreeBSD: src/usr.bin/units/Makefile,v 1.5.2.1 2002/02/18 16:16:57 ru Exp $
 
 PROG=	units
+.if !defined(NO_SHARE)
 FILES=	units.lib
 FILESDIR=	${SHAREDIR}/misc
+.endif
 
 LDADD+=	-lprivate_edit -lprivate_ncurses
 DPADD+=	${LIBEDIT} ${LIBNCURSES}
