--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -127,13 +127,19 @@
     ..
     share
         calendar
+            de_AT.ISO_8859-15
+            ..
             de_DE.ISO8859-1
             ..
             fr_FR.ISO8859-1
             ..
             hr_HR.ISO8859-2
             ..
+            hu_HU.ISO8859-2
+            ..
             ru_RU.KOI8-R
+            ..
+            uk_UA.KOI8-U
             ..
         ..
         dict
