--- a/usr.bin/calendar/Makefile
+++ b/usr.bin/calendar/Makefile
@@ -2,20 +2,20 @@
 # $FreeBSD: src/usr.bin/calendar/Makefile,v 1.12.8.6 2003/04/06 20:04:56 dwmalone Exp $
 
 PROG=	calendar
-SRCS=   calendar.c io.c day.c ostern.c paskha.c
+SRCS=	calendar.c io.c day.c ostern.c paskha.c
+
 .if !defined(NO_SHARE)
 INTER=          de_AT.ISO_8859-15 de_DE.ISO8859-1 fr_FR.ISO8859-1 \
-		hr_HR.ISO8859-2 hu_HU.ISO8859-2 ru_RU.KOI8-R uk_UA.KOI8-U
-DE_LINKS=       de_DE.ISO_8859-1 de_DE.ISO8859-15 de_DE.ISO_8859-15
+		hr_HR.ISO8859-2 hu_HU.ISO8859-2 \
+		ru_RU.KOI8-R uk_UA.KOI8-U
+DE_LINKS=       de_DE.ISO8859-15
 FR_LINKS=       fr_FR.ISO8859-15
-HR_LINKS=       hr_HR.ISO_8859-2
 TEXTMODE?=	444
 
 beforeinstall:
 	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m ${TEXTMODE} \
 	    ${.CURDIR}/calendars/calendar.* ${DESTDIR}${SHAREDIR}/calendar
 .for lang in ${INTER}
-	mkdir -p ${DESTDIR}${SHAREDIR}/calendar/${lang}
 	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m ${TEXTMODE} \
 		${.CURDIR}/calendars/${lang}/calendar.* \
 		${DESTDIR}${SHAREDIR}/calendar/${lang} 
@@ -27,10 +27,6 @@ beforeinstall:
 .for link in ${FR_LINKS}
 	rm -rf ${DESTDIR}${SHAREDIR}/calendar/${link}
 	${LN} -s fr_FR.ISO8859-1 ${DESTDIR}${SHAREDIR}/calendar/${link}
-.endfor
-.for link in ${HR_LINKS}
-	rm -rf ${DESTDIR}${SHAREDIR}/calendar/${link}
-	${LN} -s hr_HR.ISO8859-2 ${DESTDIR}${SHAREDIR}/calendar/${link}
 .endfor
 .endif
 
