libc and pthreads - Fix atfork issues with nmalloc, update dmalloc
* Implement atfork handling for nmalloc.  As part of this, refactor
  some of nmalloc.

* Remove ZERO_LENGTH_PTR from nmalloc.  Instead, force 0-byte
  allocations to allocate 1 byte.  The standard requires unique
  pointers to be returned.

* For now go back to a single depot lock instead of a per-zone
  lock.  It is unclear whether multi-threaded performance will
  suffer or not, but its the only way to implement atfork handling.

* Implement proper atfork interlocks for nmalloc via pthreads to avoid
  corruption when heavily threaded programs call fork().

* Bring dmalloc up to date in various ways, including properly
  implementing a minimum 16-byte alignment for allocations >= 16 bytes,
  and atfork handling.  Also use a global depot lock for the same
  reason we use it in nmalloc, and implement a front-end magazine
  shortcut for any allocations <= 2MB.

Reported-by: mneumann

--- a/lib/libthread_xu/thread/Makefile.inc
+++ b/lib/libthread_xu/thread/Makefile.inc
@@ -38,6 +38,7 @@ SRCS+= \
 	thr_pspinlock.c \
 	thr_resume_np.c \
 	thr_rtld.c \
+	thr_malloc.c \
 	thr_rwlock.c \
 	thr_rwlockattr.c \
 	thr_self.c \
