libpam: Update Makefile.
In preparations for upcoming changes.

--- a/lib/libpam/Makefile
+++ b/lib/libpam/Makefile
@@ -11,7 +11,8 @@ CFLAGS+= -I${SRCDIR}/lib -I${SRCDIR}/include -I${.CURDIR}
 WARNS=	3
 
 # Dist files
-SRCS=	openpam_borrow_cred.c \
+SRCS=	\
+	openpam_borrow_cred.c \
 	openpam_check_owner_perms.c \
 	openpam_configure.c \
 	openpam_constants.c \
@@ -30,8 +31,8 @@ SRCS=	openpam_borrow_cred.c \
 	openpam_readlinev.c \
 	openpam_readword.c \
 	openpam_restore_cred.c \
-	openpam_set_option.c \
 	openpam_set_feature.c \
+	openpam_set_option.c \
 	openpam_straddch.c \
 	openpam_subst.c \
 	openpam_ttyconv.c \
@@ -76,29 +77,7 @@ PAMINCS=openpam.h \
 INCS=	${PAMINCS:S;^;${SRCDIR}/include/security/;} pam_mod_misc.h
 INCSDIR=	${INCLUDEDIR}/security
 
-MAN=	pam_acct_mgmt.3 \
-	pam_authenticate.3 \
-	pam_chauthtok.3 \
-	pam_close_session.3 \
-	pam_end.3 \
-	pam_get_data.3 \
-	pam_get_item.3 \
-	pam_get_user.3 \
-	pam_getenv.3 \
-	pam_getenvlist.3 \
-	pam_open_session.3 \
-	pam_putenv.3 \
-	pam_set_data.3 \
-	pam_set_item.3 \
-	pam_setcred.3 \
-	pam_start.3 \
-	pam_strerror.3 \
-	pam_sm_acct_mgmt.3 \
-	pam_sm_authenticate.3 \
-	pam_sm_chauthtok.3 \
-	pam_sm_close_session.3 \
-	pam_sm_open_session.3 \
-	pam_sm_setcred.3 \
+MAN=	openpam.3 \
 	openpam_borrow_cred.3 \
 	openpam_free_data.3 \
 	openpam_free_envlist.3 \
@@ -115,17 +94,39 @@ MAN=	pam_acct_mgmt.3 \
 	openpam_straddch.3 \
 	openpam_subst.3 \
 	openpam_ttyconv.3 \
+	pam.3 \
+	pam_acct_mgmt.3 \
+	pam_authenticate.3 \
+	pam_chauthtok.3 \
+	pam_close_session.3 \
+	pam_conv.3 \
+	pam_end.3 \
 	pam_error.3 \
 	pam_get_authtok.3 \
+	pam_get_data.3 \
+	pam_get_item.3 \
+	pam_get_user.3 \
+	pam_getenv.3 \
+	pam_getenvlist.3 \
 	pam_info.3 \
+	pam_open_session.3 \
 	pam_prompt.3 \
+	pam_putenv.3 \
+	pam_set_data.3 \
+	pam_set_item.3 \
+	pam_setcred.3 \
 	pam_setenv.3 \
+	pam_sm_acct_mgmt.3 \
+	pam_sm_authenticate.3 \
+	pam_sm_chauthtok.3 \
+	pam_sm_close_session.3 \
+	pam_sm_open_session.3 \
+	pam_sm_setcred.3 \
+	pam_start.3 \
+	pam_strerror.3 \
 	pam_verror.3 \
 	pam_vinfo.3 \
 	pam_vprompt.3 \
-	openpam.3 \
-	pam.3 \
-	pam_conv.3 \
 	pam.conf.5
 
 .PATH: ${SRCDIR}/lib ${SRCDIR}/doc/man
