libpam: Reorganize libpam build structure.
In preparations for hooking back the openpam_static.c

No functional change except for debug info (paths have changed).

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1072,7 +1072,7 @@ lib/libopie__L: lib/librecrypto__L
 _prebuild_libs+= lib/libopie
 
 _prebuild_libs+= lib/libradius lib/libsbuf lib/libtacplus lib/libm \
-		lib/libpam lib/libypclnt lib/lib${THREAD_LIB} \
+		lib/libpam/libpam lib/libypclnt lib/lib${THREAD_LIB} \
 		lib/libpthread lib/liblzma lib/libprop lib/libdevattr
 
 _generic_libs+=	usr.bin/flex/lib
