--- a/lib/libpam/modules/pam_ssh/Makefile
+++ b/lib/libpam/modules/pam_ssh/Makefile
@@ -6,8 +6,8 @@ WARNS?=	4
 LDADD=		-lprivate_ssh -lprivate_crypto -lcrypt
 DPADD=		${LIBSSH} ${LIBRECRYPTO} ${LIBCRYPT}
 
-CFLAGS+=	-I${.CURDIR}/../../../crypto/openssh
-CFLAGS+=	-I${.CURDIR}/../../../crypto/libressl/include
+CFLAGS+=	-I${.CURDIR}/../../../../crypto/openssh
+CFLAGS+=	-I${.CURDIR}/../../../../crypto/libressl/include
 LDFLAGS+=	-rpath /usr/lib/priv ${PRIVATELIB_LDFLAGS}
 
 .include <bsd.lib.mk>
