libpam: Play some 4D chess for static pam modules support.
We need A, B, C and D. C depends on A, B depends on D, A&B and C&D are both
built in pairs. So split A&B and hope for the best.

PAM modules were moved in closer to support this in the previous commit.
Also use workaround to get matching set pointers. Might be a pam bug.
Now su(1), login(1) and friends are usable in -static compilations with
pending buildworld support patches.

No functional change to usual case of shared libpam.so.

Partially-taken-from: FreeBSD

--- a/lib/libpam/Makefile
+++ b/lib/libpam/Makefile
@@ -1,6 +1,8 @@
 # libpam is normally built earlier by the _prebuild_libs target.
+# Modules link in the shared libpam.so, but static_libpam links in the static
+# modules so all modules need to be built before the static_libpam.
 
-SUBDIR+=	libpam modules
-SUBDIR_ORDERED=
+SUBDIR+=	libpam modules static_libpam
+SUBDIR_ORDERED=	modules static_libpam
 
 .include <bsd.subdir.mk>
