LIBPRIV: Add few missing ${LIBRECRYPTO} dependencies.
Mainly to satisfy the NOSHARED build.

--- a/usr.bin/cpio/Makefile
+++ b/usr.bin/cpio/Makefile
@@ -1,8 +1,9 @@
 PROG=	bsdcpio
 SRCS=	cmdline.c cpio.c
 SRCS+=	err.c line_reader.c passphrase.c
-DPADD=	${LIBARCHIVE} ${LIBBZ2} ${LIBLZMA} ${LIBMD} ${LIBZ}
-LDADD=	-larchive -lbz2 -llzma -lmd -lz
+DPADD=	${LIBARCHIVE} ${LIBBZ2} ${LIBLZMA} ${LIBMD} ${LIBRECRYPTO} ${LIBZ}
+LDADD=	-larchive -lbz2 -llzma -lmd -lprivate_crypto -lz
+LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
 CONTRIBDIR=	${.CURDIR}/../../contrib/libarchive/cpio
 .PATH: ${CONTRIBDIR} ${CONTRIBDIR}/../libarchive_fe
