--- a/usr.bin/opiepasswd/Makefile
+++ b/usr.bin/opiepasswd/Makefile
@@ -9,8 +9,9 @@ CFLAGS+=-I${OPIE_DIST}
 CFLAGS+=-DINSECURE_OVERRIDE
 WARNS?=	3
 
-DPADD=	${LIBOPIE} ${LIBMD}
-LDADD=	-lopie -lmd
+DPADD=	${LIBOPIE} ${LIBMD} ${LIBRECRYPTO}
+LDADD=	-lopie -lmd -lprivate_crypto
+LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
 BINOWN=	root
 BINMODE=4555
